CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
SET(CMAKE_USE_RELATIVE_PATHS TRUE)

PROJECT("Ancient Calendar")

SET(MODULE_NAME ancal)

FIND_PACKAGE(Qt4)

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})

FILE(GLOB PREMOC_HEADERS ${PROJECT_SOURCE_DIR}/*.hpp)
FILE(GLOB FILES ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB FORMS ${PROJECT_SOURCE_DIR}/*.ui)

QT4_WRAP_CPP(HEADERS_MOC ${PREMOC_HEADERS})
QT4_WRAP_UI(FORMS_HEADER ${FORMS})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})

ADD_EXECUTABLE(${MODULE_NAME}
               ${FILES} ${PREMOC_HEADERS}
               ${HEADERS_MOC} ${FORMS_HEADER})
SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES OUTPUT_NAME "ancal")
TARGET_LINK_LIBRARIES(${MODULE_NAME} ${QT_LIBRARIES} ${QT_QTMAIN_LIBRARY})

